# M3DC1

./: LICENSE  adfasdf
doc/: M3DC1.tex  building.tex  doc.tex  inputs.tex  m3dc1.bib  makefile  mesh-gen.tex  numerical_methods.tex  output.tex  petsc_option.tex  physics-model.tex  running_jobs.tex  tutorials.tex  units.tex
m3dc1_scorec/: CMakeLists.txt
m3dc1_scorec/api/: m3dc1_scorec.cc  m3dc1_scorec.h  name_convert.h
m3dc1_scorec/include/: m3dc1_matrix.h
m3dc1_scorec/src/: m3dc1_matrix.cc
unstructured/: M3Dmodules.f90  adapt.f90  auxiliary_fields.f90  bb8.mk  bootstrap.f90  control.f90  dgx.mk  diagnostics.f90  electric_field.f90  field.f90  flux.mk  geometry.f90  gradshafranov.f90  hdf5_output.f90  init_basicq.f90  init_common.f90  init_conds.f90  init_eqdsk.f90  init_vmec.f90  input.f90  ludef_t.f90  m3dc1_nint.f90  makefile  metricterms_new.f90  mit_gcc.mk  model.f90  newpar.f90  nintegrate_mod.f90  output.f90  particle.f90  particle_com.f90  perlmutter_cpu_gcc.mk  perlmutter_gpu_gcc.mk  read_schaffer_field.f90  read_vmec.f90  restart_hdf5.f90  runaway_advection.f90  scorec_matrix.f90  signal_handler.f90  target.mk  (+4 more)
unstructured/README/: readme.flux  readme.mit  readme.perlmutter_cpu  readme.perlmutter_gpu
unstructured/idl/: field_data.pro  read_gamma.pro  read_quad_points.pro
unstructured/idl/python/: AGENTS.md
unstructured/idl/python/m3dc1/: __init__.py  a2cc.py  a_bracket.py  compensate_renorm.py  contour_and_legend.py  convert_units.py  create_map.py  delstar.py  dimensions.py  dx.py  dz.py  eval_field.py  field_at_point.py  field_data.py  field_spectrum.py  find_nulls.py  flux_at_q.py  flux_average.py  flux_average_field.py  flux_coord_field.py  flux_coordinates.py  flux_coordinates_old.py  get_colors.py  get_lcfs.py  get_normalizations.py  get_slice_time.py  hdf5_file_test.py  is_in_tri.py  laplacian.py  lcfs.py  make_label.py  make_units.py  map_field.py  nulls.py  parse_units.py  plot_coils.py  plot_field.py  plot_field_ntor.py  plot_field_spectrum.py  plot_flux_average.py  (+30 more)
unstructured/modules/bb8/m3dc1/: devel
unstructured/modules/dgx/m3dc1/: devel
unstructured/modules/flux/m3dc1/: devel
unstructured/modules/mit/m3dc1/: devel-gcc
unstructured/modules/perlmutter/m3dc1/: devel-cpu-gcc  devel-gpu-gcc
unstructured/python/m3dc1/: __init__.py  convert_meshgen_input.py  eval_field.py  flux_average.py  flux_coordinates.py  fpylib.py  gamma_file.py  get_field.py  get_ped_param.py  get_plasma_params.py  get_time_of_slice.py  get_timetrace.py  omegastari.py  pedestal_finder.py  plot_coils.py  plot_flux_average.py  plot_shape.py  plot_time_trace.py  poincare.py  resistive_scaling.py  time_trace_fast.py  tpf.py
unstructured/regtest/KPRAD_2D/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/KPRAD_restart/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/NCSX/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_cpu_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/RMP/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/RMP_nonlin/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_cpu_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/adapt/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_gpu_gcc
unstructured/regtest/pellet/base/: batchjob.bb8  batchjob.dgx  batchjob.mit_gcc  batchjob.perlmutter_cpu_gcc  batchjob.perlmutter_gpu_gcc  options_bjacobi.type_mumps  options_bjacobi.type_superludist
unstructured/templates/: makefile
unstructured/templates/AUG/fw1_mesh/: input  makefile
unstructured/templates/AUG/rw1_mesh/: first_wall.pts  input  makefile
unstructured/templates/Circle/: makefile
unstructured/templates/Circle/circle_0.02/: input  makefile
unstructured/templates/Circle/circle_0.04/: input  makefile
unstructured/templates/Circle/circle_0.1/: input  makefile
unstructured/templates/DIII-D/fw1_mesh/: input  makefile
unstructured/templates/DIII-D/rw1_mesh/: DIIID  input  makefile
unstructured/templates/EAST/fw1_mesh/: input  makefile
unstructured/templates/EAST/rw1_mesh/: input  makefile
unstructured/templates/ITER/fw1_mesh/: input  makefile
unstructured/templates/ITER/rw1_mesh/: first_wall.pts  input  makefile
unstructured/templates/JET/: makefile
unstructured/templates/JET/fw1_mesh/: input  makefile
unstructured/templates/JET/rw1_mesh/: input  makefile
unstructured/templates/KSTAR/fw1_mesh/: input  makefile
unstructured/templates/KSTAR/rw1_mesh/: first_wall.pts  input  makefile
unstructured/templates/NSTX-U/fw1_mesh/: input  makefile
unstructured/templates/NSTX-U/rw1_mesh/: first_wall.pts  input  makefile
unstructured/templates/NSTX/fw1_mesh/: input  makefile
unstructured/templates/NSTX/rw1_mesh/: input  makefile  nstx_lim_refined.pts
unstructured/tutorials/Create_Multiregion_Mesh/: batchjob.stellar  input
unstructured/tutorials/Linear_RMP/: C1input  batchjob.flux  batchjob.stellar
unstructured/tutorials/Linear_stability/: C1input  batchjob.flux  batchjob.stellar  makefile
unstructured/tutorials/Setup_EFIT_Equilibrium/: C1input.adapt  C1input.interpolate  C1input.refine  C1input.test  batchjob.flux.adapt  batchjob.flux.interpolate  batchjob.flux.refine  batchjob.flux.test  batchjob.stellar.adapt  batchjob.stellar.interpolate  batchjob.stellar.refine  batchjob.stellar.test  makefile
